# vllm-mindspore

./: .gitignore  .gitmodules  .pre-commit-config.yaml  0001-suit-glm41v.patch  0001-suit-vllm-0.9.1-qwen3-omni.patch  @!  CMakeLists.txt  CODEOWNERS  CONTRIBUTING.md  CONTRIBUTING_CN.md  Dockerfile  LICENSE  OWNERS  README.md  README_CN.md  README_en.md  build.sh  build_image.sh  install_depend_pkgs.sh  pytest.ini  release_packages.yaml  requirements-build.txt  requirements.txt  requirements_ascend.txt  requirements_build_ascend.txt  requirements_build_cpu.txt  requirements_cpu.txt  setup.py  transformer_4_57_1.patch
codecheck_toolkits/: check_init_lazy_imports.py  check_spdx_header.py  mypy.sh  png-lint.sh  pyproject.toml  shellcheck.sh  update-dockerfile-graph.sh  validate_config.py  vllm_codecheck.sh
codecheck_toolkits/pre_commit/: check_pickle_imports.py  mypy.py
dalang/: CMakeLists.txt
dalang/api/: c_api.cc  c_api.h  cpp_api.cc
dalang/cli/: main.cc  options.cc  options.h
dalang/common/: common.h  logger.h  visible.h
dalang/compiler/: CMakeLists.txt  compiler.cc  compiler.h  instruction.list
dalang/dac/common/: common.h  logger.h
dalang/dac/compiler/: CMakeLists.txt  compiler.cc  compiler.h  instruction.list
dalang/dac/ir/: CMakeLists.txt  compiler.cc  compiler.h  namespace.cc  namespace.h  node.h  operator.h
dalang/dac/lexer/: CMakeLists.txt  comment.cc  comment.h  identifier.cc  identifier.h  keyword.cc  keyword.h  lexer.cc  lexer.h  literal.cc  literal.h  operator.cc  operator.h  separator.cc  separator.h  token.cc  token.h
dalang/dac/parser/: CMakeLists.txt  ast_node.cc  ast_node.h  ast_visitor.h  expr.h  expr.list  parser.cc  parser.h  stmt.h
dalang/dac/vm/: CMakeLists.txt  intrinsic.cc  intrinsic.h  vm.cc  vm.h
dalang/dair/: CMakeLists.txt
dalang/dair/ops/: CMakeLists.txt  ops.list  ops_name.cc  ops_name.h
dalang/dair/pass/: CMakeLists.txt  pass.cc  pass.h
dalang/dair/tensor/: CMakeLists.txt  da_tensor.cc  da_tensor.h  tensor.cc  tensor.h  tensor_data.h  ud.h
dalang/dart/: CMakeLists.txt
dalang/dart/runtime/: CMakeLists.txt  executor.cc  executor.h  kernel.cc  kernel.h  kernel_lib.h  mempool.cc  mempool.h  utils.cc  utils.h
dalang/ir/: compiler.cc  compiler.h  namespace.cc  namespace.h  node.h  operator.h
dalang/lexer/: comment.cc  identifier.cc  identifier.h  keyword.cc  keyword.h  keyword.list  lexer.cc  lexer.h  literal.cc  literal.h  literal_type.list  operator.cc  operator.h  operator.list  separator.cc  separator.h  token.cc  token.h  token_type.list
dalang/parser/: ast_node.cc  ast_node.h  ast_visitor.h  expr.h  expr.list  parser.cc  parser.h  stmt.h  stmt.list
dalang/sample/: da_llm.da  error.da  fibonacci_20.da  if0.da  while.da
dalang/tensor/: da_tensor.cc  da_tensor.h
dalang/vm/: CMakeLists.txt  intrinsic.cc  vm.cc  vm.h
dapy/: CMakeLists.txt  test_api.py
dapy/dalang_py/: pybind11_api.cc  pybind11_api.h
dapy/python/: check_api.py
dapy/python/dapy/: __init__.py  _dag.py  api.py
dapy/tests/: test_ms_mul.py
inferrt/: .gitignore  CMakeLists.txt  README.md  build.sh  pyproject.toml  setup.py
inferrt/cc/: CMakeLists.txt
inferrt/cc/api/: c_api.cc
inferrt/cc/c/vm/: vm.cc  (+2 more)
inferrt/cc/cli/: options.cc
inferrt/cc/kernel/: CMakeLists.txt  kernel.h  kernel_lib.cc  kernel_lib.h
inferrt/cc/kernels/: CMakeLists.txt  kernel.h  kernel_lib.cc  kernel_lib.h
inferrt/cc/sample/: da_llm_0.da  expr2.da  expr_inst_file_args.da  function_recursive.da  if.da  pass.pattern
inferrt/include/: custom_op_api.h
inferrt/py/: CMakeLists.txt
inferrt/py/dalang_py/: pybind11_ir.cc
inferrt/python/: CMakeLists.txt  check_api.py  check_backend.py
inferrt/python/dapy/: __init__.py  api.py  fx_backend.py  ir.py
inferrt/python/mrt/: __init__.py  api.py  collective.py  config.py  ir.py  register_inferrt_to_vllm.py  utils.py
inferrt/python/ms_inferrt/: __init__.py  collective.py  ir.py  register_inferrt_to_vllm.py
inferrt/python/pybind/: CMakeLists.txt
inferrt/src/: CMakeLists.txt
inferrt/src/common/: CMakeLists.txt  common.h  dynamic_lib_loader.cc  dynamic_lib_loader.h  logger.h  throw.h  visible.h
inferrt/src/config/: CMakeLists.txt
inferrt/src/hardware/: CMakeLists.txt  device.h
inferrt/src/ir/: CMakeLists.txt  graph.cc  graph.h
inferrt/src/ops/: CMakeLists.txt  custom_op_register.cc  custom_op_register.h  kernel_lib.cc  kernel_lib.h  op_register.cc  op_register.h  operator.cc  operator.h
inferrt/src/profiler/: CMakeLists.txt  profiler.cc  profiler.h
inferrt/src/pybind/: CMakeLists.txt
inferrt/src/runtime/: CMakeLists.txt  device_inference.cc  device_inference.h  op_support.cc  op_support.h
inferrt/tests/cpp/: CMakeLists.txt  test_graph_deepcopy.cc
mopt/: .gitignore  CMakeLists.txt  build.sh  pyproject.toml  requirements.txt  setup.py
mopt/include/mopt/: CMakeLists.txt  Passes.h  Passes.td
mopt/include/mopt-c/: Dialects.h  Passes.h  Registration.h
mopt/lib/: CMakeLists.txt
mopt/lib/CAPI/: CMakeLists.txt  Dialects.cc  Passes.cc  Registration.cc
mopt/lib/Conversion/: CMakeLists.txt
mopt/lib/Dialect/: CMakeLists.txt  Mrt.cc  MrtDialect.cc
mopt/lib/Fusion/: CMakeLists.txt  MarkTorchToStablehloOp.cpp  OutlineStablehloFusionRegions.cpp  PropagateTorchSymbolicShape.cpp  RemoveRedundantDynamicBroadcast.cpp  SymbolicShape.cpp  VerifySymbolicShapeAttrs.cpp
mopt/lib/pass/: CMakeLists.txt  ReshapeConversionPass.cc
mopt/python/: CMakeLists.txt  MoptModule.cc
mopt/tests/: CMakeLists.txt  lit.cfg.py
mopt/tools/: CMakeLists.txt
python/: CMakeLists.txt  dag.py
python/dalang/: main.cc  pybind11_api.cc  pybind11_api.h
python_api/: CMakeLists.txt  api.py  dag.py
python_api/dalang_py/: pybind11_api.cc  pybind11_api.h
tests/: CMakeLists.txt  README.md  __init__.py  check_ms_mul.py  common.py  mark_utils.py  ops_utils.py  test_cases_parallel.py
tests/hardware/: hardware_cpu_test.cc  hardware_test.cc
tests/st/: register_parallel_tests.json  runtest.sh
tests/ut/: runtest.sh  test_empty_ut_cases.py
tests/utils/: common_utils.py  model_info.yaml
vllm_mindspore/ops/: CMakeLists.txt
(+1223 files in other folders)
