[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mrt"
version = "1.0"
description = "InferRT - High-performance inference runtime for machine learning models"
readme = "README.md"
license = "Apache-2.0"
authors = [{name = "MRT Team", email = "mrt-team@example.com"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
]
keywords = ["inference", "runtime", "machine learning", "deep learning", "pytorch"]
requires-python = ">=3.9"
dependencies = ["torch", "nanobind"]

[project.optional-dependencies]
dev = ["pytest>=6.0.0", "black>=21.0.0"]

[project.urls]
Homepage = "https://gitee.com/mindspore/vllm-mindspore"

[tool.setuptools]
package-dir = {"" = "python"}
packages = ["mrt", "mrt.torch"]
include-package-data = true
package-data = { mrt = ["*.so", "lib/*.so", ".commit-id"] }
ext-modules = [
    {name = "mrt._mrt_ir", sources = ["python/pybind/mrt/pybind_ir.cc"]}
]
