[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ms_inferrt"
version = "0.1"
description = "InferRT - High-performance inference runtime for machine learning models"
readme = "README.md"
license = "Apache-2.0"
authors = [{name = "InferRT Team", email = "inferrt-team@example.com"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
]
keywords = ["inference", "runtime", "machine learning", "deep learning", "pytorch"]
requires-python = ">=3.9"
dependencies = ["torch", "nanobind"]

[project.optional-dependencies]
dev = ["pytest>=6.0.0", "black>=21.0.0"]

[project.urls]
Homepage = "https://gitee.com/mindspore/vllm-mindspore"

[tool.setuptools]
package-dir = {"" = "python"}
packages = ["ms_inferrt", "ms_inferrt.torch"]
include-package-data = true
package-data = { ms_inferrt = ["*.so", "lib/*.so", ".commit-id"] }
ext-modules = [
    {name = "ms_inferrt._ms_inferrt_ir", sources = ["python/pybind/ms_inferrt/pybind_ir.cc"]}
]
