[build-system]
requires = ["setuptools>=61.0", "wheel>=0.37.0", "cmake>=3.20"]
build-backend = "setuptools.build_meta"

[project]
name = "mopt"
version = "1.0"
description = "Python bindings for MRT MLIR dialects"
readme = "README.md"
license = "Apache-2.0"
authors = [{name = "MRT Team", email = "mrt-team@example.com"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
]
keywords = ["mlir", "compiler", "dialects"]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=6.0.0", "black>=21.0.0"]

[project.urls]
Homepage = "https://gitee.com/mindspore/vllm-mindspore"

[tool.setuptools]
package-dir = {"" = "python"}
ext-modules = [
    {name = "mopt._mlir_libs._mopt", sources = ["python/MoptModule.cc"]}
]